tests/single_instruction_translation_validation/mcsema/register-variants/vcvttps2dq_ymm_ymm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:178:26: error: use of undefined value '@my.fabs.v4f32'
  %10 = call <4 x float> @my.fabs.v4f32(<4 x float> %9)
                         ^
0.02user 0.00system 0:00.02elapsed 111%CPU (0avgtext+0avgdata 27736maxresident)k
0inputs+16outputs (0major+3267minor)pagefaults 0swaps
